logs/Slang/generated/keywords/5.6.2--keyword_highz0.sv.log
name: keyword_highz0
description: The 'highz0' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_highz0.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_highz0.sv:8:8: error: expected declarator
    bit highz0;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_highz0.sv:8:9: error: expected member
    bit highz0;
        ^~~~~~
